Change .tex style for ideal line breaks.

--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -18,6 +18,8 @@ $endif$
 \definecolor[titlegrey][h=757575]
 \definecolor[sectioncolor][h=397249]
 \definecolor[rulecolor][h=9cb770]
+\exhyphenpenalty=10000
+\hyphenpenalty=10000
 
 % Enable hyperlinks
 \setupinteraction[state=start, color=sectioncolor]
@@ -52,7 +54,7 @@ $endif$
 \definedescription
   [description]
   [headstyle=bold, style=normal,
-   location=hanging, width=14mm, distance=14mm, margin=0cm]
+   location=hanging, width=14mm, distance=15mm, margin=0cm]
 
 \setupitemize[autointro, packed]    % prevent orphan list intro
 \setupitemize[indentnext=no]
